# axum_crud_api

./: Cargo.toml  README.md  sqlite3  tasks.db  tasks.db-shm  tasks.db-wal  testtasks.db  testtasks.db-shm  testtasks.db-wal
migrations/: 20221109172616_task.sql
src/: main.rs
src/controllers/: task.rs
src/models/: task.rs
src/tests/: mock.rs  mod.rs
