[package]
name = "axum_crud_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1", features = ["full"] }
serde = "1.0.147"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "json", "sqlite"] }
anyhow = "1.0.66"
serde_json = "1.0.87"
tower-http = { version = "0.3.4", features = ["trace"] }
# swagger openapi doc
utoipa = { version = "2.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "2", features = ["axum"] }

